[package]
name = "ecalc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "*"
egui_extras = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
simple-message-box = "*"
rfd = "*"
image = "*"

[build-dependencies]
embed-resource = "*"